samples/_failures_safe/1761177244_0ec683_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_08c56227.c: In function ‘read_log_file’:
./samples/SAFE/__tmp_08c56227.c:124:9: error: expected ‘{’ at end of input
  124 |         struct
      |         ^~~~~~
./samples/SAFE/__tmp_08c56227.c:124:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_08c56227.c:124:9: error: expected declaration or statement at end of input
